@@ -6,6 +6,9 @@ import com.ssafy.d3v.backend.answer.dto.StandardAnswerResponse;
 import com.ssafy.d3v.backend.answer.entity.Answer;
 import com.ssafy.d3v.backend.answer.repository.AnswerCustomRepository;
 import com.ssafy.d3v.backend.answer.repository.AnswerRepository;
+import com.ssafy.d3v.backend.common.dto.PagedResponse;
+import com.ssafy.d3v.backend.common.dto.PaginationInfo;
+import com.ssafy.d3v.backend.feedback.repository.FeedbackCustomRepository;
 import com.ssafy.d3v.backend.member.entity.Member;
 import com.ssafy.d3v.backend.member.repository.MemberRepository;
 import com.ssafy.d3v.backend.question.entity.Question;
@@ -16,7 +19,10 @@ import com.ssafy.d3v.backend.question.repository.ServedQuestionRepository;
 import jakarta.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -101,18 +107,35 @@ public class AnswerServiceImpl implements AnswerService {
     }
 
     @Override
-    public List<AnswerResponse> getTotalAnswers(long questionId) {
-        Question question = getQuestionById(questionId);
+    public PagedResponse<AnswerResponse> getTotalAnswers(long questionId, int size, int page) {
+        Question question = questionRepository.findById(questionId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 질문입니다. ID: " + questionId));
 
-        return answerCustomRepository.findPublicAnswersByQuestion(question)
-                .stream()
+        List<Answer> answerList = answerCustomRepository.findPublicAnswersByQuestion(question, size, page);
+        long totalRecords = answerCustomRepository.countPublicAnswersByQuestion(question);
+
+        List<AnswerResponse> answerResponses = answerList.stream()
                 .map(ele -> new AnswerResponse(
                         ele.getQuestion().getId(),
                         ele.getMember().getId(),
                         ele.getAnswerId(),
                         ele.getContent(),
                         ele.getCreatedAt(),
-                        ele.getAccessLevel()))
-                .toList();
+                        ele.getAccessLevel(),
+                        (int) feedbackCustomRepository.countFeedbackByAnswer(ele)))
+                .collect(Collectors.toList());
+
+        int totalPages = (int) Math.ceil((double) totalRecords / size);
+        Integer nextPage = (page < totalPages) ? page + 1 : null;
+        Integer prevPage = (page > 1) ? page - 1 : null;
+
+        PaginationInfo paginationInfo = new PaginationInfo(
+                totalRecords,
+                page,
+                totalPages,
+                nextPage,
+                prevPage
+        );
+        return new PagedResponse<>(answerResponses, paginationInfo);
     }
 }
